[package]
name = "winit_event_helper"
version = "0.2.0"
edition = "2021"
description = "Easy winit event handling using callback functions."
license = "MIT"
repository = "https://github.com/IvoteSligte/winit_event_helper/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
winit = "0.27.2"
