[package]
name = "winit_event_helper"
version = "0.3.1"
edition = "2021"
description = "High level winit event handling using callback functions."
license = "MIT"
repository = "https://github.com/IvoteSligte/winit_event_helper/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
## Determines whether device or window events should be used for inputs.
## When on, device events are used and inputs are registered no matter
## if the window is focused or not. Otherwise, they are only registered
## when the window is focused.
save_device_inputs = []

[dependencies]
ahash = "0.8.0"
winit = "0.27.2"
bitflags = "1.3.2"
document-features = "0.2.6"
