[package]
name = "winit_event_helper"
version = "0.5.0"
edition = "2021"
description = "Simplified winit event handling using callback functions."
license = "MIT"
repository = "https://github.com/IvoteSligte/winit_event_helper/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
## Allows the user to setup callbacks for individual windows.
unique_windows = []

## Allows the user to setup callbacks for individual devices.
unique_devices = []

## Allows the user to identify which device sent a window event (if applicable).
windows_with_device_ids = []

[dependencies]
ahash = "0.8.3"
winit = "0.28.1"
bitflags = "1.3.2"
document-features = "0.2.7"
paste = "1.0.11"
defaultmap = "0.5.0"
